ENH: Added module and widgets for ultrasound parameter remote control

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ endif()
 add_subdirectory(OpenIGTLinkIF)
 add_subdirectory(OpenIGTLinkRemote)
 add_subdirectory(PlusRemote)
+add_subdirectory(UltrasoundRemoteControl)
 ## NEXT_MODULE
 
 #-----------------------------------------------------------------------------
