ENH: Add a python accessible class for using commands with the new infrastructure

--- a/OpenIGTLinkIF/MRML/CMakeLists.txt
+++ b/OpenIGTLinkIF/MRML/CMakeLists.txt
@@ -24,6 +24,8 @@ if(OpenIGTLink_PROTOCOL_VERSION GREATER 1)
     vtkMRMLIGTLTrackingDataQueryNode.cxx
     vtkMRMLIGTLTrackingDataBundleNode.cxx
     vtkMRMLIGTLSensorNode.cxx
+    vtkSlicerOpenIGTLinkCommand.cxx
+    vtkSlicerOpenIGTLinkCommand.h
     )
 endif()
 
