ENH: Call pauseRender() and resumeRender() to stop rendering during PeriodicProcess()
Depends on https://github.com/Slicer/Slicer/pull/1016

--- a/OpenIGTLinkIF/MRML/CMakeLists.txt
+++ b/OpenIGTLinkIF/MRML/CMakeLists.txt
@@ -42,6 +42,7 @@ set(${KIT}_TARGET_LIBRARIES
   SlicerBaseLogic
   vtkSlicerAnnotationsModuleMRML
   vtkSlicerMarkupsModuleMRML
+  qSlicerBaseQTGUI
   )
 
 #-----------------------------------------------------------------------------
