ENH: Change streaming volume to use vtkMRMLStreamingVolumeNode
- For now, vtkIGTLVP9Codec has been implemented until it can be moved to SlicerIGSIO, at which point VP9 support can be disabled in SlicerOpenIGTLink

--- a/OpenIGTLinkIF/MRML/CMakeLists.txt
+++ b/OpenIGTLinkIF/MRML/CMakeLists.txt
@@ -31,7 +31,8 @@ endif()
 
 if(SlicerOpenIGTLink_USE_VP9)
   list(APPEND ${KIT}_SRCS
-    vtkMRMLBitStreamNode.cxx
+    vtkIGTLVP9VolumeCodec.cxx
+    vtkIGTLVP9VolumeCodec.h
   )
 endif()
 
