ENH: Revamp PlusRemote server control
Plus remote control is managed using two nodes:
- vtkMRMLPlusServerLauncherRemoteNode: Manages information related to the connection the launcher and stores references to the connector and server nodes (1 launcher can have many servers)
- vtkMRMLPlusServerNode: Manages information related to a single server and stores a reference to the config file (vtkMRMLTextNode) and launcher

vtkSlicerPlusRemoteLogic monitors all launcher and server nodes within the scene and issues commands to the launcher to spin up/down server instances

Two widgets have been implemented for Plus remote control:
- qMRMLPlusServerLauncherRemoteWidget: Select and control launcher nodes using a qMRMLPlusServerLauncherTableView
- qMRMLPlusServerLauncherTableView: Displays information for all server nodes and provides controls to change config files and start/stop servers

Config files using the compound extension *.plus.xml can be dragged and dropped into slicer to start servers.

--- a/OpenIGTLinkIF/CMakeLists.txt
+++ b/OpenIGTLinkIF/CMakeLists.txt
@@ -53,10 +53,13 @@ set(MODULE_INCLUDE_DIRECTORIES
 set(MODULE_SRCS
   qSlicerOpenIGTLinkIFModule.cxx
   qSlicerOpenIGTLinkIFModule.h
+  qSlicerTextFileReader.cxx
+  qSlicerTextFileReader.h
   )
 
 set(MODULE_MOC_SRCS
   qSlicerOpenIGTLinkIFModule.h
+  qSlicerTextFileReader.h
   )
 
 set(MODULE_UI_SRCS
