--- a/PlusRemote/Widgets/CMakeLists.txt
+++ b/PlusRemote/Widgets/CMakeLists.txt
@@ -36,6 +36,13 @@ set(${KIT}_TARGET_LIBRARIES
   vtkSlicer${MODULE_NAME}ModuleLogic
   )
 
+if (Slicer_VERSION VERSION_LESS "4.11.0")
+  #TODO: When the stable version of Slicer includes the Texts module/widgets, they can be removed from SlicerOpenIGTLink
+  list(APPEND ${KIT}_INCLUDE_DIRECTORIES
+    ${vtkSlicerOpenIGTLinkIFModuleMRML_SOURCE_DIR}/Text
+    )
+endif()
+
 #-----------------------------------------------------------------------------
 SlicerMacroBuildModuleWidgets(
   NAME ${KIT}
