ENH: Add vtkSlicerPlusOpenIGTLinkCommand class
Previously, the vtkSlicerOpenIGTLinkCommand class in SlicerIGT was mainly designed for use with Plus, and included a number of helper methods for setting XML attributes.
The adds the functionality of the old vtkSlicerOpenIGTLinkCommand in the new vtkSlicerPlusOpenIGTLinkCommand class.

--- a/PlusRemote/MRML/CMakeLists.txt
+++ b/PlusRemote/MRML/CMakeLists.txt
@@ -22,6 +22,8 @@ set(${KIT}_SRCS
   vtkMRMLPlusServerNode.h
   vtkMRMLPlusServerLauncherNode.cxx
   vtkMRMLPlusServerLauncherNode.h
+  vtkSlicerPlusOpenIGTLinkCommand.cxx
+  vtkSlicerPlusOpenIGTLinkCommand.h
   )
 
 set(${KIT}_TARGET_LIBRARIES
