STYLE: Remove unnecessary character in CMakeLists.txt

--- a/PlusRemote/Logic/CMakeLists.txt
+++ b/PlusRemote/Logic/CMakeLists.txt
@@ -5,7 +5,7 @@ set(KIT ${PROJECT_NAME})
 set(${KIT}_EXPORT_DIRECTIVE "VTK_SLICER_${MODULE_NAME_UPPER}_MODULE_LOGIC_EXPORT")
 
 set(${KIT}_INCLUDE_DIRECTORIES
-  ${vtkSlicer${MODULE_NAME}ModuleMRML_INCLUDE_DIRS}}
+  ${vtkSlicer${MODULE_NAME}ModuleMRML_INCLUDE_DIRS}
   ${vtkSlicerVolumeRenderingModuleLogic_INCLUDE_DIRS}
   ${vtkSlicerVolumeRenderingModuleMRML_INCLUDE_DIRS}
   ${vtkSlicerVolumeRenderingModuleMRMLDisplayableManager_SOURCE_DIR}
