--- a/PlusRemote/MRML/CMakeLists.txt
+++ b/PlusRemote/MRML/CMakeLists.txt
@@ -6,6 +6,7 @@ set(${KIT}_EXPORT_DIRECTIVE "VTK_SLICER_${MODULE_NAME_UPPER}_MODULE_MRML_EXPORT"
 
 set(${KIT}_INCLUDE_DIRECTORIES
   ${vtkSlicerOpenIGTLinkIFModuleMRML_INCLUDE_DIRS}
+  ${Slicer_Base_INCLUDE_DIRS}
   )
 
 if (Slicer_VERSION VERSION_LESS "4.11.0")
